# itchio-pygame-template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/dummy/: main.py
