[tool.poetry]
name = "itchio-pygame-template"
version = "0.1.0"
description = ""
authors = ["reayd-falmouth <dr323090@falmouth.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
pygbag = "^0.9.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
